Changed index.html for User Stroy 1

--- a/index.html
+++ b/index.html
@@ -7,15 +7,9 @@
 
     </head>
     <body>
-        <header>
+        <main id="main">
 
-        </header>
-        <main>
-            
         </main>
-        <footer>
-
-        </footer>
     </body>
 
-</html> 
+</html>
